--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -10,6 +10,7 @@
 	--mariner-color: #3f6fd1;
 	--orange-color: #ff9c27;
 	--orange-dark-color: #ff810b;
+	--grey-color: #6f6f6f;
 
 	--transparent-flamenco-color: rgba(255, 129, 11, 0.2);
 	--transparent-royal-purple-color: rgba(102, 51, 152, 0.2);
