--- a/src/layouts/InternLayout/components/Header/Header.module.css
+++ b/src/layouts/InternLayout/components/Header/Header.module.css
@@ -6,13 +6,15 @@
 	box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25);
 	z-index: 1000;
 	height: 94.5px;
+	display: flex;
+	align-items: center;
 }
 
 .HeaderContent {
-	padding: 25px 0;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	height: 100%;
 }
 
 .NavList {
