feat: add components

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -11,6 +11,7 @@
 	--orange-color: #ff9c27;
 	--orange-dark-color: #ff810b;
 	--grey-color: #6f6f6f;
+	--light-grey-color: #D5D9DC;
 
 	--transparent-flamenco-color: rgba(255, 129, 11, 0.2);
 	--transparent-royal-purple-color: rgba(102, 51, 152, 0.2);
