--- a/src/components/UI/form/Input/Input.module.css
+++ b/src/components/UI/form/Input/Input.module.css
@@ -10,7 +10,28 @@
 	align-items: center;
 }
 
-.IconWrap > svg {
+.Label {
+	display: inline-block;
+	font-weight: 400;
+	font-size: 16px;
+	margin-bottom: 10px;
+}
+
+.LabelHidden {
+	position: absolute;
+
+	overflow: hidden;
+	clip: rect(0 0 0 0);
+
+	width: 0.1rem;
+	height: 0.1rem;
+	margin: -0.1rem;
+
+	white-space: nowrap;
+	clip-path: inset(50%);
+}
+
+.IconWrap>svg {
 	width: 24px;
 	height: 24px;
 }
@@ -31,6 +52,11 @@
 	font-weight: 400;
 	font-size: 20px;
 	color: #000000;
+}
+
+.Input:disabled {
+	color: var(--light-grey-color);
+	border-color: var(--light-grey-color);
 }
 
 .Input[type='search']::-webkit-search-decoration,
