feat: add components

--- a/src/components/ApplicationCard/ApplicationCard.module.css
+++ b/src/components/ApplicationCard/ApplicationCard.module.css
@@ -7,7 +7,7 @@
 	gap: 12px;
 	width: 400px;
 	height: max-content;
-	background: #FFFFFF;
+	background: #ffffff;
 	box-shadow: 8px 8px 10px 5px rgba(102, 51, 152, 0.1);
 	border-radius: 20px;
 }
