--- a/src/modules/user/Intern/components/Map/Map.module.css
+++ b/src/modules/user/Intern/components/Map/Map.module.css
@@ -8,5 +8,5 @@
 }
 
 .platform:hover {
-	background: radial-gradient(#038D77 0%, rgba(255, 255, 255, 0) 75%);
+	background: radial-gradient(#038d77 0%, rgba(255, 255, 255, 0) 75%);
 }
