--- a/src/modules/user/Intern/sections/InternshipsPlaces/InternshipsPlaces.module.css
+++ b/src/modules/user/Intern/sections/InternshipsPlaces/InternshipsPlaces.module.css
@@ -31,7 +31,7 @@
 	align-items: flex-start;
 	padding: 12px;
 	gap: 12px;
-	background: #FFFFFF;
+	background: #ffffff;
 	box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.15);
 	border-radius: 20px;
 }
