--- a/src/components/UI/NextImage/NextImage.module.css
+++ b/src/components/UI/NextImage/NextImage.module.css
@@ -11,9 +11,39 @@
 }
 
 .Default {
-	background: -webkit-linear-gradient(left, rgb(109, 59, 152) 0%, rgb(146, 106, 153) 20%, rgb(205, 181, 172) 60%, rgb(242, 231, 211) 100%);
-	background: -o-linear-gradient(left, rgb(109, 59, 152) 0%, rgb(146, 106, 153) 20%, rgb(205, 181, 172) 60%, rgb(242, 231, 211) 100%);
-	background: -ms-linear-gradient(left, rgb(109, 59, 152) 0%, rgb(146, 106, 153) 20%, rgb(205, 181, 172) 60%, rgb(242, 231, 211) 100%);
-	background: -moz-linear-gradient(left, rgb(109, 59, 152) 0%, rgb(146, 106, 153) 20%, rgb(205, 181, 172) 60%, rgb(242, 231, 211) 100%);
-	background: linear-gradient(to right, rgb(109, 59, 152) 0%, rgb(146, 106, 153) 20%, rgb(205, 181, 172) 60%, rgb(242, 231, 211) 100%);
+	background: -webkit-linear-gradient(
+		left,
+		rgb(109, 59, 152) 0%,
+		rgb(146, 106, 153) 20%,
+		rgb(205, 181, 172) 60%,
+		rgb(242, 231, 211) 100%
+	);
+	background: -o-linear-gradient(
+		left,
+		rgb(109, 59, 152) 0%,
+		rgb(146, 106, 153) 20%,
+		rgb(205, 181, 172) 60%,
+		rgb(242, 231, 211) 100%
+	);
+	background: -ms-linear-gradient(
+		left,
+		rgb(109, 59, 152) 0%,
+		rgb(146, 106, 153) 20%,
+		rgb(205, 181, 172) 60%,
+		rgb(242, 231, 211) 100%
+	);
+	background: -moz-linear-gradient(
+		left,
+		rgb(109, 59, 152) 0%,
+		rgb(146, 106, 153) 20%,
+		rgb(205, 181, 172) 60%,
+		rgb(242, 231, 211) 100%
+	);
+	background: linear-gradient(
+		to right,
+		rgb(109, 59, 152) 0%,
+		rgb(146, 106, 153) 20%,
+		rgb(205, 181, 172) 60%,
+		rgb(242, 231, 211) 100%
+	);
 }
