--- a/src/modules/LoginPage/LoginPage.module.css
+++ b/src/modules/LoginPage/LoginPage.module.css
@@ -6,7 +6,7 @@
 	gap: 16px;
 	width: 640px;
 	height: max-content;
-	background: #FFFFFF;
+	background: #ffffff;
 	box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.15);
 	border-radius: 20px;
 }
