--- a/src/modules/auth/LoginPage/LoginPage.module.css
+++ b/src/modules/auth/LoginPage/LoginPage.module.css
@@ -15,6 +15,13 @@
 	width: 100%;
 }
 
+.FormWrap {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+}
+
 .LoginFormControls {
 	display: flex;
 	justify-content: space-between;
