--- a/src/modules/auth/LoginPage/LoginPage.module.css
+++ b/src/modules/auth/LoginPage/LoginPage.module.css
@@ -30,9 +30,9 @@
 }
 
 .additional {
-	color: var(--grey-color)
+	color: var(--grey-color);
 }
 
 .error {
-	color: var(--torch-red-color)
+	color: var(--torch-red-color);
 }
