--- a/src/components/ProfileCard/ProfileCard.module.css
+++ b/src/components/ProfileCard/ProfileCard.module.css
@@ -5,7 +5,9 @@
 	padding: 12px;
 	gap: 20px;
 	height: max-content;
-	width: 310px;
+	width: 100%;
+	box-shadow: 8px 8px 10px 5px rgba(102, 51, 152, 0.1);
+	border-radius: 20px;
 }
 
 .role {
