--- a/src/modules/intern/HomePage/sections/Tasks/Tasks.module.css
+++ b/src/modules/intern/HomePage/sections/Tasks/Tasks.module.css
@@ -6,7 +6,7 @@
 	gap: 16px;
 	width: 100%;
 	height: max-content;
-	background: radial-gradient(to bottom right, rgba(102, 51, 152, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+	background: linear-gradient(to bottom right, rgba(102, 51, 152, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
 	box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.15);
 	border-radius: 20px;
 }
@@ -15,8 +15,9 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 0px;
+	padding: 0px 16px;
 	gap: 16px;
+	width: 100%;
 }
 
 .listItem {
@@ -25,4 +26,5 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 0px;
+	width: 100%;
 }
