--- a/src/modules/LandingPage/sections/AboutPlatform/components/StatsListCard/StatsListCard.module.css
+++ b/src/modules/LandingPage/sections/AboutPlatform/components/StatsListCard/StatsListCard.module.css
@@ -13,9 +13,9 @@
 
 @media screen and (max-width: 500px) {
 	.List {
-		grid-template-columns: repeat(4, 230px);
-		justify-content: start;
-		overflow-x: scroll;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
 		padding: 10px;
 	}
 }
