--- a/src/modules/LandingPage/sections/StartCareer/StartCareer.module.css
+++ b/src/modules/LandingPage/sections/StartCareer/StartCareer.module.css
@@ -1,6 +1,6 @@
 .Section {
 	width: 100%;
-	background-image: url('/images/landing-page/home-vacancies__bg\ 1.jpg');
+	background-image: url('/images/landing-page/home-vacancies.jpg');
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
